--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ bondpy==1.8.6
 camera-calibration==1.17.0
 camera-calibration-parsers==1.12.0
 catkin==0.8.10
+certifi==2024.7.4
+charset-normalizer==3.3.2
 coloredlogs==15.0.1
 cv-bridge==1.16.2
 cycler==0.12.1
@@ -18,6 +20,7 @@ genmsg==0.6.0
 gennodejs==2.0.2
 genpy==0.6.15
 humanfriendly==10.0
+idna==3.7
 image-geometry==1.16.2
 interactive-markers==1.12.0
 Jinja2==3.1.4
@@ -45,6 +48,7 @@ qt-dotgraph==0.4.2
 qt-gui==0.4.2
 qt-gui-cpp==0.4.2
 qt-gui-py-common==0.4.2
+requests==2.32.3
 resource_retriever==1.12.7
 rosbag==1.16.0
 rosboost-cfg==1.15.8
@@ -93,6 +97,8 @@ tf2-sensor-msgs==0.7.7
 topic-tools==1.16.0
 torch @ file:///home/x1/torch-2.1.0a0%2B41361538.nv23.06-cp38-cp38-linux_aarch64.whl#sha256=5112e2ef5051f1003ae2ffb545ae596377df66979d62a954d774f18009064dbe
 torchaudio==2.0.0
+torchvision==0.15.2
 traitlets==5.14.3
 typing_extensions==4.12.2
+urllib3==2.2.2
 xacro==1.14.18
